--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 		<button id="file-button">Открыть</button>
 	</myspace>
     <input type="file" id="file-input-lex" accept=".lexx">
-    <input type="file" id="file-input" accept=".txt, .fb2, .epub, .zip" multiple>
+    <input type="file" id="file-input" accept=".txt, .fb2, .epub, .zip, .pdf" multiple>
 	<button class="save" id="savebutton">Сохранить в MP3</button>
 	<br>
 	<textarea readonly class="text" id="stat-area"></textarea>
